--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     ports:
       - 9900:9000
     volumes:
-      - cache-whisper:/root/.cache/whisper
+      - cache-whisper:/root/.cache
 
   volumes:
     mongodb: {}
