--- a/.github/workflows/publish-service.yml
+++ b/.github/workflows/publish-service.yml
@@ -25,8 +25,11 @@ jobs:
         with:
           username: chinaboard
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+      - name: Get sha short
+        shell: bash
+        run: echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
       - name: Build and push service image
         run: |
-          docker build -t ${{ env.IMAGE_NAME }} -f service.Dockerfile .
+          docker build -t ${{ env.IMAGE_NAME }}:${{ env.sha_short }} -t ${{ env.IMAGE_NAME }} -f service.Dockerfile .
+          docker push ${{ env.IMAGE_NAME }}:${{ env.sha_short }}
           docker push ${{ env.IMAGE_NAME }}
