--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,16 +30,14 @@ jobs:
         shell: bash
         run: |
           echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
-          echo "service=$(echo "${{ github.event.head_commit.message }}" | grep -o "service")" >> "$GITHUB_ENV"
-          echo "worker=$(echo "${{ github.event.head_commit.message }}" | grep -o "worker")" >> "$GITHUB_ENV"
       - name: Build and push service image
-        if: ${{ env.serivce }} == "service"
+        if: contains(github.event.head_commit.message, 'service')
         run: |
           docker build -t ${{ env.SERVICE_IMAGE_NAME }}:${{ env.sha_short }} -t ${{ env.SERVICE_IMAGE_NAME }} -f service.Dockerfile .
           docker push ${{ env.SERVICE_IMAGE_NAME }}:${{ env.sha_short }}
           docker push ${{ env.SERVICE_IMAGE_NAME }}
       - name: Build and push worker image
-        if: ${{ env.worker }} == "worker"
+        if: contains(github.event.head_commit.message, 'worker')
         run: |
           docker build -t ${{ env.WORKER_IMAGE_NAME }}:${{ env.sha_short }} -t ${{ env.WORKER_IMAGE_NAME }} -f worker.Dockerfile .
           docker push ${{ env.WORKER_IMAGE_NAME }}:${{ env.sha_short }}
